templates de productos mejorada , esto es para guia para el desarrollo luego en el frontend sera mejorado

--- a/templates/productos/lista.html
+++ b/templates/productos/lista.html
@@ -8,7 +8,10 @@
 <ul>
     {% for p in productos %}
         <li>
-            <strong>{{ p.nombre }}</strong> - {{ p.pais_origen }} -
+            <a href="{% url 'detalle_producto' p.pk %}">
+                <strong>{{ p.nombre }}</strong>
+            </a>
+            - {{ p.pais_origen }} -
             Stock: {{ p.stock }} - Precio: {{ p.precio_unitario }}
         </li>
     {% empty %}
