--- a/templates/productos/lista.html
+++ b/templates/productos/lista.html
@@ -6,6 +6,10 @@
 <h2>Productos disponibles</h2>
 
 <ul>
+    {% if user.is_authenticated and user.perfil.rol == 'productor' %}
+    <p><a href="{% url 'crear_producto' %}">Crear nuevo producto</a></p>
+    {% endif %}
+
     {% for p in productos %}
         <li>
             <a href="{% url 'detalle_producto' p.pk %}">
