--- a/templates/productos/detalle.html
+++ b/templates/productos/detalle.html
@@ -13,7 +13,8 @@
 
 <hr>
 
-{% if user.is_authenticated and hasattr(user, 'perfil') and user.perfil.rol == 'empresa' %}
+{# Si es empresa logueada, puede solicitar operación #}
+{% if user.is_authenticated and user.perfil.rol == 'empresa' %}
     <p>
         <a href="{% url 'crear_operacion' producto.pk %}">
             Solicitar operación comercial
@@ -26,7 +27,8 @@
     </p>
 {% endif %}
 
-{% if user.is_authenticated and hasattr(user, 'perfil') and user.perfil == producto.productor %}
+{# Si es el productor dueño del producto, puede editarlo #}
+{% if user.is_authenticated and user.perfil == producto.productor %}
     <p>
         <a href="{% url 'editar_producto' producto.pk %}">Editar este producto</a>
     </p>
